--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@ $small: 0px;
 $medium: 768px;
 
 @mixin atSmall{
-  @media (min-width: $small){
+  @media (max-width: $medium - 1){
     @content;
   }
 }
